--- a/src/main/resources/tempplates/mgr/form/design/index.html
+++ b/src/main/resources/tempplates/mgr/form/design/index.html
@@ -21,7 +21,7 @@
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                        	<span class="selected-label pull-left"></span>
                         <span class="caret"></span>
-                        <!-- <span class="sr-only">Toggle Dropdown</span> -->
+                        <span class="sr-only">Toggle Dropdown</span>
                     </button>
                     <div class="dropdown-menu open">
                         <div class="hs-searchbox">
@@ -33,6 +33,7 @@
                         	</li>
                         </ul>
                     </div>
+                    <input class="hidden hidden-field" name="form_tree" readonly="readonly" aria-hidden="true" type="text"/>
                 </div>
                 <div id="area_field_tree" />
 			</div>
