--- a/src/main/resources/tempplates/mgr/domain/detail.html
+++ b/src/main/resources/tempplates/mgr/domain/detail.html
@@ -72,50 +72,10 @@
 			      	</div>
 					<div class="col-xs-5 col-sm-5 col-md-5 col-lg-5"></div>
 				</div>
-				<div class="row page-header">
-				  	<h3>data tag</h3>
-				</div>
-				<div class="row form-group">
-					<!-- *********** Form Domain 'datastatus' *********** -->
-				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="datastatus">Data Status</label>
-				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-						<select class="form-control" th:field="*{datastatus}" th:attr="readonly=${readonly},disabled=${readonly}">
-							<option th:each="ds:${allDataStatus}" th:value="${ds.value}" th:text="${ds.text}"></option>
-						</select>
-					</div>
-					<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
-					<!-- *********** Form Domain 'version' *********** -->
-				    <label class="col-xs-1 col-sm-1 col-md-1 col-lg-1 control-label" for="version">Version</label>
-				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				      	<input type="text" class="form-control" placeholder="Version" th:field="*{version}" readonly="readonly" />
-					</div>
-					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-				</div>
-				<div class="row form-group">
-					<!-- *********** Form Domain 'createdat' *********** -->
-				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="createdat">Created At</label>
-				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-						<input type="hidden" th:field="*{createdat}" /> 
-						<input type="text" class="form-control" th:value="${#dates.format(domain.createdat,'yyyy-MM-dd HH:mm:ss')}" readonly="readonly" />
-					</div>
-					<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
-					<!-- *********** Form Domain 'updatedat' *********** -->
-				    <label class="col-xs-1 col-sm-1 col-md-1 col-lg-1 control-label" for="updatedat">Updated At</label>
-				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-						<input type="hidden" th:field="*{updatedat}" />
-						<input type="text" class="form-control" th:value="${#dates.format(domain.updatedat,'yyyy-MM-dd HH:mm:ss')}" readonly="readonly" />
-					</div>
-					<div class="col-xs-2 col-sm-2 col-md-2 col-lg-2"></div>
-				</div>
-				<div class="row page-header">
-				  	<h4></h4>
-				</div>
-				<div class="row">
-					<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 bottom-btns">
-						<button type="button" class="btn btn-default return">Return</button>
-						<button type="submit" class="btn btn-primary save" th:attr="readonly=${readonly},disabled=${readonly}">Save</button>
-					</div>
-				</div>
+				<div th:replace="/fragments/entity-common :: dataTagRow(null)" />
+				<div th:replace="/fragments/entity-common :: statusRow(${domain},${allDataStatus},${readonly})" />
+				<div th:replace="/fragments/entity-common :: dateRow(${domain},${readonly})" />
+				<div th:replace="/fragments/entity-common :: btnRow(${readonly})" />
 			</div>
 		</form>
 	</div>
