--- a/src/main/resources/tempplates/mgr/form/detail.html
+++ b/src/main/resources/tempplates/mgr/form/detail.html
@@ -15,7 +15,7 @@
 <body>
 	<div th:replace="/fragments/layout::header('login') " />
 	<div class="container-fluid">
-		<form id="form-detail" class="form form-horizontal" method="post" th:object="${form}">
+		<form id="form-detail" class="form form-horizontal" method="post" th:action="@{/mgr/form/} + ${action}" th:object="${form}">
 			<input type="hidden" name="action" /> 
 			<input type="hidden" th:field="*{id}" />
 			<div class="container-fluid">
@@ -40,7 +40,8 @@
 					<!-- *********** Form Domain 'datastatus' *********** -->
 				    <label class="col-xs-2 col-sm-2 col-md-2 col-lg-2 control-label" for="formdomainid">表单域</label>
 				    <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
-				    	<div th:replace="/fragments/hierarchy-select :: hselect('hselect_domain',${hselectDomains},'none')" />
+				    	<div th:replace="/fragments/hierarchy-select :: hselect('hselect_domain',${hselectDomains},${form.formdomainid})" />
+				      	<input type="hidden" th:field="*{formdomainid}" />
 					</div>
 					<div class="col-xs-1 col-sm-1 col-md-1 col-lg-1"></div>
 					<!-- *********** Form Domain 'version' *********** -->
@@ -73,15 +74,20 @@
 <script type="text/javascript" th:src="@{/zyc/js/zyc-tree-expression-modal.js}"></script>
 <script th:inline="javascript" type="text/javascript">
 	$(document).ready(function() {
-		/* var emptyValue = zyc.emptyNodeType.NONE.value;
-        var $hselectDomain = $('#hselect_domain').hierarchySelect({
-            width: 300,
-            emptyNodeValue: emptyValue
-        }).hierarchySelect('setValue', emptyValue); */
+		var $form = $('#form-detail');
+		
+		$('#hselect_domain').hierarchySelect({
+			afterNodeClick: function(e) {
+				var val = $(this).attr('value')
+					, invalid = zyc.invalidBusNode(val);
+				$form.find('input[name="formdomainid"]').val(invalid ? '' : val);
+			}
+		});
         
 		$('.bottom-btns .btn.return').off('click').on('click', function(e) {
 			zyc.redirect('/mgr/form');
 		});
+		
 	});
 </script>
 </html>
