--- a/src/main/resources/tempplates/mgr/form/field/index.html
+++ b/src/main/resources/tempplates/mgr/form/field/index.html
@@ -12,8 +12,9 @@
 <body>
 	<div th:replace="/fragments/layout::header('login') " />
 	<div class="container-fluid">
+		<input type="hidden" name="formid" th:value="${formid}" />
 		<div id="toolbar-fields">
-			<button type="button" id="btn_refresh_fields" class="btn btn-default">刷新</button>
+			<button type="button" id="btn_refresh_fields" class="btn btn-default" th:attr="data-bind-href=@{/api/form/field/refresh}">刷新</button>
 		</div>
 		<table id="table-fields"></table>
 	</div>
@@ -28,11 +29,31 @@
 <script type="text/javascript" th:src="@{/zyc/js/zyc-bs-table.js}" ></script>
 <script th:inline="javascript" type="text/javascript">
 	$(document).ready(function() {
-		var formid = [[${formid}]];
+		var formid = $('input[name="formid"]').val() || null;
+		
 		//事件列表
 		var events = {
 			'btn_refresh_fields': function(e) {
-				alert('s');
+				if(zyc.confirm('刷新字段涉及到数据同步，可能需要一定时间。继续刷新吗？')) {
+					alert($(this).attr('data-bind-href') + '/' + formid);
+					$.ajax({
+						url : $(this).attr('data-bind-href') + '/' + formid,
+						data: {},
+						type: 'post',
+						dataType: 'json',
+						async: true,
+						success: function(resp) {
+							var success = resp.status === '0';
+						   	zyc.alert(resp.message, success ? 'info' : 'error');
+							if(success) {
+								$table.bootstrapTable('refresh');
+							}
+						},
+					    error: function(err) {
+					    	zyc.alert(null, 'error');
+					    }
+					});	
+				}
 			}
 		};
 		
@@ -55,34 +76,44 @@
 		
 		$('.btn.limit-operate').attr('disabled', true);
 		
-		/* var $table;
+		var $table;
 		
-		bstable.init($table = $('#table-forms'), {
-			toolbar: '#toolbar-forms',
+		bstable.init($table = $('#table-fields'), {
+			toolbar: '#toolbar-fields',
 			url: '/mgr/form/field/fields',
 			method: 'post',
 			columns: [
             	{ checkbox: true, visible: true } 
             	, { field: 'id', title: 'id', sortable: true, visible: false }
-            	, { field: 'formdomainid', title: '表单域ID', visible: false }
-            	, { field: 'formdomainname', title: '表单域', sortable: true, halign: 'center', align: 'left', formatter: formatDomain, cellStyle: bstable.cellDisableRowTooltip }
-            	, { field: 'formcode', title: '编码', sortable: true, halign: 'center', align: 'left' }
-            	, { field: 'formname', title: '名称', sortable: true, halign: 'center', align: 'left' }
-            	, { field: 'formtype', title: 'formtype', sortable: false, visible: false }
-            	, { field: 'formtypename', title: '表单类型', sortable: false, halign: 'center', align: 'center' }
-            	, { field: 'datastatus', title: '状态', sortable: true, halign: 'center', align: 'center', formatter: zyc.textDataStatus }
-            	, { field: 'createdat', title: '创建日期', sortable: true, halign: 'center', align: 'right', formatter: zyc.formatTimestamp }
-            	, { field: 'updatedat', title: '更新日期', sortable: true, halign: 'center', align: 'right', formatter: zyc.formatTimestamp }
+            	, { field: 'formid', title: 'formid', sortable: true, visible: false }
+            	, { field: 'formname', title: '表单名称', sortable: true, halign: 'center', align: 'left' }
+            	, { field: 'formarea', title: 'formarea', sortable: true, visible: false }
+            	, { field: 'formarealabel', title: '表单区域', sortable: true, halign: 'center', align: 'left' }
+            	, { field: 'fieldvalue', title: '表单字段', sortable: true, halign: 'center', align: 'left' }
+            	, { field: 'fieldname', title: '表单字段名称', sortable: true, halign: 'center', align: 'left' }
+            	, { field: 'datatype', title: 'datatype', sortable: true, visible: false }
+            	, { field: 'datatypelabel', title: '数据类型', sortable: true, halign: 'center', align: 'center' }
+            	, { field: 'displaytype', title: 'displaytype', sortable: true, visible: false }
+            	, { field: 'displaytypelabel', title: '显示类型', sortable: true, halign: 'center', align: 'center' }
+            	, { field: 'editable', title: 'editable', sortable: true, visible: false }
+            	, { field: 'editablelabel', title: '是否可编辑', sortable: true, halign: 'center', align: 'center' }
+            	, { field: 'description', title: '备注说明', sortable: true, halign: 'center', align: 'left' }
+            	, { field: 'datastatus', title: 'datastatus', sortable: true, visible: false  }
+            	, { field: 'datastatuslabel', title: '状态', sortable: true, halign: 'center', align: 'center' }
+            	, { field: 'createdat', title: 'createdat', sortable: true, visible: false }
+            	, { field: 'createdatlabel', title: '创建日期', sortable: true, halign: 'center', align: 'right' }
+            	, { field: 'updatedat', title: 'updatedat', sortable: true, visible: false }
+            	, { field: 'updatedatlabel', title: '更新日期', sortable: true, halign: 'center', align: 'right' }
             	, { field: 'version', title: '版本号', sortable: true, halign: 'center', align: 'right' }
             ],
-            sortName: 'formdomainid',
+            sortName: 'formid',
             rowTooltipable: true,
             rowTooltipTitle: '单击选中当前行，双击进入详情页。',
             onLoadSuccess: function(data) {
         		$table.find('tbody input[type="checkbox"][name="btSelectItem"]').off('change').on('change', function(e) {
         			var checked = $(this).is(':checked'),
         				value = $(this).val();
-    				$('.btn.limit-operate').data('formid', checked ? value : null).attr('disabled', !checked);
+    				$('.btn.limit-operate').data('formfieldid', checked ? value : null).attr('disabled', !checked);
         		});
             },
 			onClickRow: function (item, $element) {
@@ -93,15 +124,17 @@
 	            return false;
 	        }
 		}, function(params) {
-			var sort = params.sort === 'formdomainname' ? 'formdomainid' : params.sort; 
+			var sort = params.sort === 'formname' ? 'formid' : params.sort; 
 			return {
 	    		pagination: {
 		    		order: sort
 	    		},
-				condition: {},
+				condition: {
+					formid: formid
+				},
 				searchText: params.search
 			};
-		}); */
+		});
 	});
 </script>
 </html>
